--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="container my-5">
   <h2 class="text-center mb-4" id="Contact-us">Contact Us</h2>
   <div class="row align-items-center">
-    <h6 class="text-center"><i>We are here to help you with event info, ticketing, and more.</i></h6>
+    <h6 class="text-center text-secondary"><i>We are here to help you with event info, ticketing, and more.</i></h6>
     <div class="col-md-6">
       <form>
         <div class="mb-3 text-start">
